--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,7 +14,11 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "password-hash": "^1.2.2",
     "pg": "^8.5.1",
     "pg-format": "^1.0.4"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
