Cleared useless components, SQL tests

--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles --silent",
+    "test-with-logs": "jest --detectOpenHandles"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
