--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "jest --detectOpenHandles --silent",
+    "test": "jest",
     "test-with-logs": "jest --detectOpenHandles"
   },
   "dependencies": {
@@ -25,6 +25,21 @@
     "pg-format": "^1.0.4"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "bufferutil": "^4.0.3",
+    "canvas": "^2.7.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-security": "^1.4.0",
+    "grunt": "^1.4.0",
+    "grunt-contrib-uglify": "^5.0.1",
+    "grunt-retire": "^1.0.9",
+    "jest": "^26.6.3",
+    "retire": "^2.2.5",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.3",
+    "supertest-session": "^4.1.0",
+    "ts-node": "^9.1.1",
+    "uglify": "^0.1.5",
+    "utf-8-validate": "^5.0.5"
   }
 }
