--- a/api/database/docker-compose.yml
+++ b/api/database/docker-compose.yml
@@ -1,14 +1,17 @@
 version: "3"
 services:
-    psql:
-        image: postgres:latest
-        restart: always
-        container_name: user-database
-        ports:
-            - "5432:5432"
-        environment:
-          POSTGRES_USER: ${PSQL_USER}
-          POSTGRES_PASSWORD: ${PSQL_PASS}
-          TZ: "Europe/Helsinki"
-        volumes:
-            - ./postgres-data:/var/lib/postgresql/data
+  user-database:
+    image: postgres:latest
+    restart: always
+    ports:
+      - "5432:5432"
+    container_name: user-database
+    environment:
+      TZ: "Europe/Helsinki"
+    env_file:
+      - ./.env
+    networks:
+      - api
+
+networks:
+  api:
