--- a/api/package.json
+++ b/api/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "test": "jest",
+    "prestart": "npm install --only=prod",
+    "start": "node ./bin/www",
+    "test": "jest --detectOpenHandles --silent",
     "test-with-logs": "jest --detectOpenHandles"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
