.env example updated

--- a/api/database/.env.example
+++ b/api/database/.env.example
@@ -1,2 +1,16 @@
-PSQL_USER=user
-PSQL_PASS=password
+PSQL_USER=postgres
+PSQL_PASS=secret-password
+
+PGUSER=postgres
+PGHOST=0.0.0.0
+PGPASSWORD=secret-password
+PGDATABASE=user-database
+PGPORT=5432
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=secret-password
+POSTGRES_DB=user-database
+
+
+MODE=notdev
+TEST=no
